Fixed the overflow-y issue by removing it
nothing got effected rather than submenu which was not visible properly, but now looks okay

--- a/Design System/stylesheet.css
+++ b/Design System/stylesheet.css
@@ -45,9 +45,7 @@ h2{font-size: 2.8rem;}
   body::-webkit-scrollbar {
     display: none;
   }
-  .codepenDiv{
-    overflow-y: scroll;
-  }
+
   button {
     border: none;
   border-radius: 5px;
